--- a/webapps/sign-up-sign-in-service-api/pipeline.yaml
+++ b/webapps/sign-up-sign-in-service-api/pipeline.yaml
@@ -47,7 +47,7 @@ extends:
           - displayName: 'Assign App Roles to Managed Identity'
             scriptRepo: trdPipelineCommon
             scriptPath: '/templates/powershell/appregs/AssignAppRolesToApp.ps1'
-            scriptArguments: '-AppName $(Environment.Name)GC$(nc-function-web)$(nc-resource-webapp)$(nc-region-id)01 -BackendAppName $(Environment.Name)TRA$(nc-function-infrastructure)$(nc-resource-apimanagement)1002-Backend-ApimOAuth -RolesToAssinToApp $(roleTradeRemosRead),$(roleTradeRemosUpdate) -Clientid $(AdoSpClientId) -ClientSecret $(AdoSpClientSecret) -TenantId $(TenantId)'
+            scriptArguments: '-AppName $(Environment.Name)GC$(nc-function-web)$(nc-resource-webapp)$(nc-region-id)02 -BackendAppName $(Environment.Name)TRS$(nc-function-web)$(nc-resource-webapp)$(nc-region-id)54 -RolesToAssinToApp $(roleTradeAddressRead),$(roleTradeAddressWrite) -Clientid $(AdoSpClientId) -ClientSecret $(AdoSpClientSecret) -TenantId $(TenantId)'
     forceDevDeploy: ${{ parameters.forceDevDeploy }}
     deployToSecondary: ${{ parameters.deployToSecondary}}
     projectName: TRS
