--- a/webapps/sign-up-sign-in-service-api/pipeline.yaml
+++ b/webapps/sign-up-sign-in-service-api/pipeline.yaml
@@ -53,7 +53,7 @@ extends:
               -RolesToAssinToApp $(roleTradeAddressRead),$(roleTradeAddressWrite) 
               -Clientid $(AdoSpClientId) 
               -ClientSecret $(AdoSpClientSecret) 
-              -TenantId $(TenantId)'
+              -TenantId $(TenantId)
             
     forceDevDeploy: ${{ parameters.forceDevDeploy }}
     deployToSecondary: ${{ parameters.deployToSecondary}}
