--- a/webapps/sign-up-sign-in-service-api/pipeline.yaml
+++ b/webapps/sign-up-sign-in-service-api/pipeline.yaml
@@ -59,5 +59,5 @@ extends:
     deployToSecondary: ${{ parameters.deployToSecondary}}
     additionalVariablesFileList:
       - /vars/claims/jwt-claims-internal.yaml@trdPipelineCommon
-    projectName: TRS
+    projectName: REM
     keyVaultName: '$(Environment.Name)trdinfkv1001'
