Update App Service Plan resources to use the latest API version and enable elastic scaling

--- a/appserviceplans/appserviceplans.parameters.json
+++ b/appserviceplans/appserviceplans.parameters.json
@@ -50,22 +50,7 @@
                     "capacity": 3
                 },
                 "autoscaleSettings": {
-                    "autoscaleEnabled": "true",
-                    "mincapacity": "#{{ minCapacity }}",
-                    "maxcapacity": "#{{ maxcapacity }}",
-                    "defaultcapacity": "#{{ defaultcapacity }}",
-                    "metrics": [
-                        {
-                            "name": "CpuPercentage",
-                            "thresholdToScaleOut": "70",
-                            "thresholdToScaleIn": "50"
-                        },
-                        {
-                            "name": "MemoryPercentage",
-                            "thresholdToScaleOut": "80",
-                            "thresholdToScaleIn": "50"
-                        }
-                    ]
+                    "maxcapacity": "#{{ maxcapacity }}"
                 },
                 "customTags": {
                     "Name": "#{{ Environment.Name }}GC#{{ nc-function-web }}#{{ nc-resource-appserviceplan }}#{{ nc-region-id }}02",
